# ChangeLog for dev-python/asciitable
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/asciitable/ChangeLog,v 1.9 2011/02/17 06:06:28 bicatali Exp $

*asciitable-0.5.1 (17 Feb 2011)

  17 Feb 2011; Sébastien Fabbro <bicatali@gentoo.org>
  -asciitable-0.4.0.ebuild, +asciitable-0.5.1.ebuild:
  Version bump

*asciitable-0.5.0 (03 Jan 2011)

  03 Jan 2011; Sébastien Fabbro <bicatali@gentoo.org>
  +asciitable-0.5.0.ebuild:
  Version bump

  18 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -asciitable-0.3.1.ebuild:
  Delete.

  18 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  asciitable-0.4.0.ebuild:
  Restrict Jython ABIs. Use DISTUTILS_SRC_TEST.

*asciitable-0.4.0 (05 Dec 2010)

  05 Dec 2010; Sébastien Fabbro <bicatali@gentoo.org>
  -asciitable-0.2.6.ebuild, +asciitable-0.4.0.ebuild:
  Version bump

  29 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  asciitable-0.3.1.ebuild:
  Disable tests with Python 3.

*asciitable-0.3.1 (29 Sep 2010)

  29 Sep 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +asciitable-0.3.1.ebuild:
  Version bump

  10 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  asciitable-0.2.6.ebuild:
  Simplify dependencies. Set PYTHON_MODNAME.

*asciitable-0.2.6 (02 Sep 2010)

  02 Sep 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +asciitable-0.2.6.ebuild, +metadata.xml:
  Version bump. Moved to the main Gentoo tree

*asciitable-0.2.5 (15 Jul 2010)

  15 Jul 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +asciitable-0.2.5.ebuild, +metadata.xml:
  Initial import
