@@ -1,16 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST asciitable-0.5.0.tar.gz 90408 RMD160 a00034a9a4de898115e7b538d782e85667d980e5 SHA1 446c0877a9a315a60b56de56edecca3032c67a12 SHA256 f9453cc63757c06afe5a9b85bd3ec9e606400d46118744ccab3acb6cd0c39f2e
 DIST asciitable-0.5.1.tar.gz 161884 RMD160 be44c745b31976ee5ebcd6be5437757f28db9610 SHA1 0f3ab06cdbe61216e3f53ce2e2769573609b8f2a SHA256 b9978458fba316ef358e3758bcf1b1e9452765eb94b3339cfda1fbd34dbae892
-EBUILD asciitable-0.5.0.ebuild 697 RMD160 75965660090383fc904c7e9e2c4d34bea1f213fe SHA1 3cd5163f3abb9b7c9b0e1dcf5ecd00ed0c62e768 SHA256 6140ee47c5ea4826df704cd4b5906392a2758187d1fa80ce4f0115f4e083f628
+DIST asciitable-0.5.2.tar.gz 162524 RMD160 b30da51d8efee4e9f51ac49b83f28e5205ddde9a SHA1 8aa97e0bbfec5bdd3e112d481d708f662bfd652c SHA256 c3923f52460ae2bc7c7fcf43ae3aa98dd01265a62600d7430e2dc2a0f9c4a9b8
 EBUILD asciitable-0.5.1.ebuild 697 RMD160 be06108e6072bd8918e4e3ae76ed3e487587c0be SHA1 43bb6675d7f06446daa964d7cd70b6adfe4bb3e5 SHA256 a05ad601235522b4710e848afcae2c9ac2f759452e0c3e299d2bc33910b98b25
-MISC ChangeLog 1663 RMD160 e3608ae553d7663265b4975384221563ec564356 SHA1 feb8cae3085a363909edb30322c0546058c2d353 SHA256 9a32aace768f9c3c5d7eb843f70c217e01a48f2652446f6215aaaf2e9d3318c0
+EBUILD asciitable-0.5.2.ebuild 697 RMD160 cc79ca6f3af466d245eab96f823c4c086c434a42 SHA1 6afb0b21e2c768def2f02f252760fbfc450335f1 SHA256 6e87e119f9621b8bd96294b0d7c853f9d4e0646f8d2cb9f0171f56a290b3a759
+MISC ChangeLog 1815 RMD160 7c7b5e66203bef8e18db11a657ffe2239c36c20e SHA1 576089dde4411b121b425154489f4ffbebb918fc SHA256 b48f54bd7985212f305d386bf2462be26ed00f3dcd254ec87f9a0c2ceb16f4a0
 MISC metadata.xml 347 RMD160 e36abce006d82d0325319c08d527a0967d734c4b SHA1 0a4595023fae4208f765520851eba71f5a39b3de SHA256 54e31014bb469bde9177b175f9d1232dec0b97dbd2d30c7dc0240539f3154182
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1cu2QACgkQ1ycZbhPLE2BmSwCfZg318r8v2zvrkRj7I/XHjrws
-H5YAoIJ4msopBQ2zUVAwzBx/mxYpt6IB
-=X7K6
+iQIcBAEBAgAGBQJNrL0VAAoJENgZr6v6gHY02/4P/1+rMzUOY78UPGbadwWg/eXZ
+4d3ipo74Bdk05V+POEKfW99cHFIAunwlu1EJdf34gUWZngv9iGNlXVwrTv9YIAOE
+ZgTAWJklkj/+aFBlsB2HjCtqEkS6JkoZ5lWf0yMxdSLykQDnpoYjxLb3tsUryPwo
+snngKxhBSITmSrO2MbPPmpICI0K8GG1xpKnDmmWXR/h9if0vxDaBk7jwTE7w1ZIK
+EDNIIn5yPn5MmOB0uK9Ykgi6H8vQT0/SQR9tCXFQq3BdURkphejVYwtE8uEw8Q1n
+MC2MbCtNdzhtOEojyk8IfcQtUUE5IghoBf2EM8uUj4ZHEjFke2/D60G7B0xbrt0H
+Hc7SoLZ0stUOAdKO+zvX1p/z2MuLyIz4Dh78S92CAAYexIMmjNUbKuglaO6vTkmM
+YQzmHlfQHlWnItFBBFgePJ59phQjK3q3P1a4Qg0iLW3MyS3EhtJioWefaLDInCYX
+t06LTBdtH661bRGvlYGydIWTUCwHbjuBuNLBXNk7kh0ciJ7sRWSXoxgpIih0/diG
+hdgcT72XD4pQ+KbqOqUufjTGTqCzIALiGB/pAe6f3PDB8qBcmq68k9Stku95qkLm
+BLEqcESN76XpGcLKSl8NM04hggVySwOhZ7msmiRPhxicD05/nS+j7ab5+ZZ/kQJG
+9aD/mQU8xxmJeoKQfEJg
+=svcf
 -----END PGP SIGNATURE-----
