@@ -1,0 +1,24 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/asciitable/Attic/asciitable-0.5.2.ebuild,v 1.1 2011/04/18 22:37:00 arfrever Exp $
+
+EAPI="3"
+SUPPORT_PYTHON_ABIS="1"
+RESTRICT_PYTHON_ABIS="*-jython"
+DISTUTILS_SRC_TEST="nosetests"
+
+inherit distutils
+
+DESCRIPTION="An extensible ASCII table reader"
+HOMEPAGE="http://cxc.harvard.edu/contrib/asciitable/ http://pypi.python.org/pypi/asciitable"
+SRC_URI="http://cxc.harvard.edu/contrib/asciitable/downloads/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND="dev-python/numpy"
+DEPEND="${RDEPEND}"
+
+PYTHON_MODNAME="asciitable.py"
