@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/asciitable
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/asciitable/ChangeLog,v 1.9 2011/02/17 06:06:28 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/asciitable/ChangeLog,v 1.10 2011/04/18 22:37:00 arfrever Exp $
+
+*asciitable-0.5.2 (18 Apr 2011)
+
+  18 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +asciitable-0.5.2.ebuild:
+  Version bump.
 
 *asciitable-0.5.1 (17 Feb 2011)
 
